[gd_scene load_steps=9 format=1]

[ext_resource path="res://kristal.gd" type="Script" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://biru.png" type="Texture" id=3]
[ext_resource path="res://bintang.png" type="Texture" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -16.1383, -27.5259, 15.7567, -27.5259, 31.8782, -0.734095, 16.1047, 27.4495, -16.0223, 27.3335, -31.5639, -0.270164 )

[sub_resource type="Animation" id=2]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.323532 ), Vector2( 0.487671, -14.7944 ), Vector2( -13.7768, 2.15232 ), Vector2( -1.38175, 12.7592 ), Vector2( 8.08727, -0.773735 ), Vector2( 0, 0.323532 ) ]
}

[sub_resource type="Animation" id=3]

resource/name = "golden"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite 2:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite 2:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.9, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -13.9036, -25.4085 ), Vector2( 10.4774, -26.7225 ), Vector2( 7.99547, 3.49829 ), Vector2( -24.9992, -3.80142 ), Vector2( 18.799, 9.63004 ), Vector2( 15.2952, 28.0253 ), Vector2( -13.6117, 24.8134 ), Vector2( -13.9036, -25.4085 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite 2:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3, 0.5, 0.6, 0.9, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 0.0 ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("player:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.323532 ), Vector2( 6.75262, 8.2678 ), Vector2( -11.9164, -10.7984 ), Vector2( -11.5192, 9.45943 ), Vector2( 7.94425, -3.25138 ), Vector2( 0, 0.323532 ) ]
}

[node name="kristal" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="player" type="Area2D" parent="."]

transform/pos = Vector2( 0, 0.323532 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -0.153, -0.23015 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="player"]

texture = ExtResource( 3 )

[node name="Sprite 2" type="Sprite" parent="player"]

visibility/opacity = 0.0
transform/pos = Vector2( -13.9036, -25.4085 )
transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="saraf" type="CollisionPolygon2D" parent="player"]

visibility/visible = false
transform/pos = Vector2( -0.153, -0.23015 )
build_mode = 0
polygon = Vector2Array( -16.1383, -27.5259, 15.7567, -27.5259, 31.8782, -0.734095, 16.1047, 27.4495, -16.0223, 27.3335, -31.5639, -0.270164 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="Label" type="Label" parent="player"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 30.0
margin/top = -10.0
margin/right = 82.0
margin/bottom = 8.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/getar = SubResource( 2 )
anims/golden = SubResource( 3 )
playback/active = true
playback/speed = 10.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="player"]

process_mode = 1
wait_time = 0.15
one_shot = true
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/goyang = SubResource( 4 )
playback/active = true
playback/speed = 10.0
blend_times = [  ]
autoplay = ""

[connection signal="area_enter_shape" from="player" to="player" method="_on_player_area_enter_shape"]

[connection signal="finished" from="player/AnimationPlayer" to="player" method="_on_AnimationPlayer_finished"]

[connection signal="timeout" from="player/Timer" to="." method="_on_Timer_timeout"]

[connection signal="finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_finished"]


